2009-03-30  Jakub Jelinek  <jakub@redhat.com>

	Revert

	2009-03-27  Manuel Lopez-Ibanez  <manu@gcc.gnu.org>

	PR c++/35652
	* gcc.dg/pr35652.C: New.
	* g++.dg/warn/pr35652.C: New.
	* gcc.dg/format/plus-1.c: Adjust message.

2009-03-30  Jakub Jelinek  <jakub@redhat.com>

	* gfortran.dg/bind_c_usage_19.f90: New test.

	PR target/39558
	* gcc.target/powerpc/altivec-29.c: New test.

2009-03-29  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2009-03-29  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/39545
	* gcc.c-torture/compile/pr16566-2.c: Add -Wno-psabi for x86-64.

	* gcc.target/i386/pr39545-1.c: New.
	* gcc.target/i386/pr39545-2.c: Likewise.

	* gcc.target/x86_64/abi/test_passing_structs.c (flex1_struct): New.
	(flex2_struct): Likewise.
	(check_struct_passing7): Likewise.
	(check_struct_passing8): Likewise.
	(f1s): Likewise.
	(f2s): Likewise.
	(main): Call check_struct_passing7 and check_struct_passing8.

2009-03-28  Jakub Jelinek  <jakub@redhat.com>

	* gcc.target/powerpc/altivec-28.c: New test.

	PR c++/39554
	* gcc.dg/wdisallowed-functions-1.c: Removed.
	* gcc.dg/wdisallowed-functions-2.c: Removed.
	* gcc.dg/wdisallowed-functions-3.c: Removed.
	* g++.dg/warn/Wdisallowed-functions-1.C: Removed.
	* g++.dg/warn/Wdisallowed-functions-2.C: Removed.
	* g++.dg/warn/Wdisallowed-functions-3.C: Removed.

2009-03-27  Xinliang David Li  <davidxl@google.com>

	PR tree-optimization/39557
	* g++.dg/tree-ssa/dom-invalid.C: New test.

2009-03-27  Xinliang David Li  <davidxl@google.com>

	PR tree-optimization/39548
	* g++.dg/tree-ssa/copyprop.C: New test.

2009-03-27  Andrew Pinski  <andrew_pinski@playstation.sony.com>

	PR c++/38638
	* g++.dg/template/typename17.C: New testcase.
	* g++.dg/template/typename18.C: New testcase.

2009-03-27  Andrew Pinski  <andrew_pinski@playstation.sony.com>

	PR c++/36799
	* g++.dg/other/var_copy-1.C: New test.

2009-03-27  Simon Martin  <simartin@users.sourceforge.net>

	PR c++/37647
	* g++.dg/parse/ctor9.C: New test.
