@@ -1,3 +1,11 @@
+2009-03-29  H.J. Lu  <hongjiu.lu@intel.com>
+
+	Backport from mainline:
+	2009-03-31  Joseph Myers  <joseph@codesourcery.com>
+
+	PR target/39592
+	* gcc.target/i386/pr39592-1.c: New test.
+
 2009-03-30  Jakub Jelinek  <jakub@redhat.com>
 
 	Revert
